--- a/partner-exception/pom.xml
+++ b/partner-exception/pom.xml
@@ -7,9 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.kaishengit</groupId>
     <artifactId>partner-exception</artifactId>
     <packaging>jar</packaging>
-
+    <version>1.0</version>
     <name>partner-exception</name>
     <url>http://maven.apache.org</url>
 
