--- a/partner-service/pom.xml
+++ b/partner-service/pom.xml
@@ -8,8 +8,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.kaishengit</groupId>
     <artifactId>partner-service</artifactId>
     <packaging>jar</packaging>
+    <version>1.0</version>
 
     <name>partner-service</name>
     <url>http://maven.apache.org</url>
@@ -20,24 +22,27 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.kaishengit</groupId>
-            <artifactId>partner-entity</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.kaishengit</groupId>
-            <artifactId>partner-util</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.kaishengit</groupId>
-            <artifactId>partner-exception</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
