--- a/partner-web/pom.xml
+++ b/partner-web/pom.xml
@@ -7,8 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.kaishengit</groupId>
     <artifactId>partner-web</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
+    <version>1.0</version>
 
     <name>partner-web</name>
     <url>http://maven.apache.org</url>
@@ -21,12 +23,16 @@
         <dependency>
             <groupId>com.kaishengit</groupId>
             <artifactId>partner-service</artifactId>
-            <version>1.0</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
 </project>
