--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
         <module>partner-entity</module>
         <module>partner-web</module>
         <module>partner-exception</module>
-        <module>partner-web</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -20,34 +19,194 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <web-version>1.0</web-version>
+        <service-version>1.0</service-version>
+        <exception-version>1.0</exception-version>
+        <util-version>1.0</util-version>
+        <entity-version>1.0</entity-version>
+
         <junit-version>4.12</junit-version>
         <commons-dbcp-version>2.1.1</commons-dbcp-version>
         <javax.servlet-version>3.1.0</javax.servlet-version>
         <jstl-version>1.2</jstl-version>
+        <spring-version>4.3.5.RELEASE</spring-version>
+        <slf4j-api-version>1.7.21</slf4j-api-version>
+        <joda-time-version>2.9.3</joda-time-version>
+        <activiti-version>5.22.0</activiti-version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-web</artifactId>
+                <version>${web-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-service</artifactId>
+                <version>${service-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-util</artifactId>
+                <version>${util-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-exception</artifactId>
+                <version>${exception-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-entity</artifactId>
+                <version>${entity-version}</version>
+            </dependency>
+
+            <!--junit-->
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit-version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!--Servlet  JSTL-->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>jstl</groupId>
+                <artifactId>jstl</artifactId>
+                <version>1.2</version>
+            </dependency>
+
+            <!--spring-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+
+            <!--spring-MVC-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+
+            <!--db-->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.40</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-dbcp2</artifactId>
                 <version>${commons-dbcp-version}</version>
             </dependency>
+
+            <!--json-->
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${javax.servlet-version}</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.8.5</version>
+            </dependency>
+
+            <!--日志-->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api-version}</version>
             </dependency>
             <dependency>
-                <groupId>jstl</groupId>
-                <artifactId>jstl</artifactId>
-                <version>${jstl-version}</version>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j-api-version}</version>
             </dependency>
+
+            <!--commons-->
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.5</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.15</version>
+            </dependency>
+
+            <!--shiro-->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-all</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+
+            <!--guava-->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>20.0</version>
+            </dependency>
+
+            <!--lom bok-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.10</version>
+            </dependency>
+
+            <!--other-->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time-version}</version>
+            </dependency>
+
+            <!-- activiti jars -->
+            <dependency>
+                <groupId>org.activiti</groupId>
+                <artifactId>activiti-engine</artifactId>
+                <version>${activiti-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.activiti</groupId>
+                <artifactId>activiti-spring</artifactId>
+                <version>${activiti-version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
