--- a/partner-service/src/main/resources/config.properties
+++ b/partner-service/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #db
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql:///mydb
+jdbc.url=jdbc:mysql:///db_partner
 jdbc.username=root
 jdbc.password=root
