--- a/partner-weixin/pom.xml
+++ b/partner-weixin/pom.xml
@@ -9,11 +9,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kaishengit</groupId>
-    <artifactId>partner-web</artifactId>
-    <packaging>war</packaging>
+    <artifactId>partner-weixin</artifactId>
+    <packaging>jar</packaging>
     <version>1.0</version>
 
-    <name>partner-web</name>
+    <name>partner-weixin</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -22,18 +22,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.kaishengit</groupId>
-            <artifactId>partner-service</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
     </dependencies>
 </project>
