--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>partner-entity</module>
         <module>partner-web</module>
         <module>partner-exception</module>
+        <module>partner-weixin</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -62,6 +63,11 @@
                 <groupId>com.kaishengit</groupId>
                 <artifactId>partner-entity</artifactId>
                 <version>${entity-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kaishengit</groupId>
+                <artifactId>partner-weixin</artifactId>
+                <version>1.0</version>
             </dependency>
 
             <!--junit-->
