--- a/partner-util/pom.xml
+++ b/partner-util/pom.xml
@@ -23,10 +23,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.kaishengit</groupId>
+            <artifactId>partner-entity</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
