--- a/partner-web/pom.xml
+++ b/partner-web/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>partner-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kaishengit</groupId>
+            <artifactId>partner-entity</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -32,8 +36,27 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
         </dependency>
     </dependencies>
     <build>
