--- a/partner-web/src/main/webapp/WEB-INF/web.xml
+++ b/partner-web/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--ShiroFilter-->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!--Spring 中央控制器-->
     <servlet>
@@ -36,6 +45,16 @@
         <servlet-name>spring</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--OpenSessionInView-->
+    <filter>
+        <filter-name>openSessionInView</filter-name>
+        <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>openSessionInView</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!--Spring ApplicationContext监听器-->
     <listener>
