--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <slf4j-api-version>1.7.21</slf4j-api-version>
         <joda-time-version>2.9.3</joda-time-version>
         <activiti-version>5.22.0</activiti-version>
+        <hibernate-version>4.3.11.Final</hibernate-version>
     </properties>
 
     <dependencyManagement>
@@ -107,6 +108,11 @@
                 <artifactId>spring-test</artifactId>
                 <version>${spring-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
 
             <!--spring-MVC-->
             <dependency>
@@ -118,6 +124,18 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring-version}</version>
+            </dependency>
+
+            <!--Hibernate-->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-ehcache</artifactId>
+                <version>${hibernate-version}</version>
             </dependency>
 
             <!--db-->
@@ -177,6 +195,11 @@
             <dependency>
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-all</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
                 <version>1.3.2</version>
             </dependency>
 
