用户登录验证完成，

--- a/partner-entity/pom.xml
+++ b/partner-entity/pom.xml
@@ -33,4 +33,13 @@
             <artifactId>hibernate-core</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>partner-entity</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
