--- a/partner-web/pom.xml
+++ b/partner-web/pom.xml
@@ -29,6 +29,10 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>partner-entity</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-all</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -51,6 +55,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
 
