添加用户修改自己登录密码功能

--- a/partner-service/pom.xml
+++ b/partner-service/pom.xml
@@ -29,6 +29,10 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>partner-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kaishengit</groupId>
+            <artifactId>partner-exception</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
