--- a/partner-service/src/main/resources/config.properties
+++ b/partner-service/src/main/resources/config.properties
@@ -3,3 +3,6 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql:///db_partner
 jdbc.username=root
 jdbc.password=root
+
+#image save path
+upload.path=E:/img
