用户登录，网盘功能完成

--- a/partner-web/pom.xml
+++ b/partner-web/pom.xml
@@ -33,6 +33,7 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>partner-exception</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-all</artifactId>
@@ -65,6 +66,10 @@
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
