--- a/partner-service/src/main/resources/config.properties
+++ b/partner-service/src/main/resources/config.properties
@@ -4,5 +4,8 @@ jdbc.url=jdbc:mysql:///db_partner
 jdbc.username=root
 jdbc.password=root
 
+#password salt
+password.salt=(*^*(&*&^KJhkjsdhfkjY^&%R&^%ttv
+
 #image save path
 upload.path=E:/img
